Crown Clipping Fix

--- a/src/components/UserList/UserList.scss
+++ b/src/components/UserList/UserList.scss
@@ -58,6 +58,7 @@
   }
 
   .user-card-grid-container {
+    padding-top: 10px;
     height: calc(100% - 100px);
     overflow-y: auto;
     @include scrollbar;
